		Mysteltainn: attack (160 -> 170)
		Katzbalger: effect (VIT+10 -> VIT+5)
		Javelin: name (Javalin -> Javelin)
		Gungnir: required lvl (48 -> 4)
		Halberd: name (Hallberd -> Halberd) //to match itemdb
		Axe: jobid (50 -> 0)
		Orcish Axe: jobid (72 -> 0)
		War Axe: attack (145 -> 140)
- Issue #134: Fixed some items about Vit Def; [Kato]
- Issue #135: Added Malangdo Mobs; [Kato]
- Issue #67 Added Enhanced Variant Shoes; [ZoneSoldier]
- Issue #78 Added Rosevine whip item, added Wink of Charm to skillOBJ and created a AutoSpellSKill # with comments; [ZoneSoldier]
- Issue #80 Added Scarletto Nail; [ZoneSoldier]
- Issue #82 Added Chrome Metal Sword [ZoneSoldier]
- Issue #83 Changed a value Chrome Metal Two-Handed Sword; [ZoneSoldier]
- Issue #79 Added Agent Katar[ZoneSoldier]

[Update 2018-06-05]
- Added Bone Hat in Electric Guitar (old normal) ID; [zoneSoldier/Kato];
- Issue #85: Added Wild Rider Card; [Kato]
- Issue #86: Added Red Eruma Card; [Kato]
- Issue #87: Added Siorava Card; [Kato]
- Issue #88: Added Parus Card; [Kato]
- Issue #89: Added Little Fatum Card; [Kato]
- Issue #63: Added Detale Card; [Kato]
- Issue #36: Added [Entweihen Hairband]+[Dark Thorn Staff] Combo with refine modifier; [ZoneSoldier]
- Fixed all the "Unrefinable" descritions on Eden Items to show up as Red Font; [ZoneSoldier]
-

[Update 2018-06-04]
- Fixed mobdb link to tRO's website; [Kato]
- Issue #4 Added all Evolved/New Pets(67) and fixed some old ones; [Kato]
- Issue #8 Fixed the behavior for the combo in Aditional Effects for exp, setted the default Base/Job EXP for 8x; [Kato]

[Update 2018-06-03]
- Fixed the delays, set all to 0.33 default, taken out the save in cookie; [Kato]
- Revamp in index.html, nixed the changelog, fixed html selects, indented the code (at least a little bit), fixed link to tRO's mobDB and etcetera; [Kato]
- #Issue #25 Added Lude Mask; [ZoneSoldier]
- #Issue #26 Added Xmas Rudolph Hairband; [ZoneSoldier]