@@ -1832,6 +1832,11 @@ n_A_MaxHP += SkillSearch(156) * 200;
 		else{
 			if(n_A_PassSkill2[12]){P_ATK += Math.floor(P_ATK*0.05);}
 		}
+		//Maiden Hat - ZoneSoldier - 6/6/2018
+		//Increase ATK + 1% per upgrade past 7.
+	if(n_A_HEAD_DEF_PLUS > 7 && EquipNumSearch(1628)){
+		p_ATK += 1 * (n_A_HEAD_DEF_PLUS - 7);
+	}
 
 	//custom TalonRO Chewing Bubblegum +1% atk
 	if(EquipNumSearch(1395))
@@ -1933,11 +1938,16 @@ n_A_MaxHP += SkillSearch(156) * 200;
 	if(n_A_HEAD_DEF_PLUS >= 6 && EquipNumSearch(565)){
 		w += 1;}
 
-	//Entweihen Hairband - Eden equipment - zonesoldier - 6/2/2018
+	//Entweihen Hairband - zonesoldier - 6/2/2018
 	//Increase MATK + 1% per upgrade past 5th upgrade
 	if(n_A_HEAD_DEF_PLUS > 5 && EquipNumSearch(1620))
 	{
 		w += 1 * (n_A_HEAD_DEF_PLUS - 5);
+	}
+	//Maiden Hat - ZoneSoldier - 6/6/2018
+	//Increase MATK + 1% per upgrade past 7.
+	if(n_A_HEAD_DEF_PLUS > 7 && EquipNumSearch(1628)){
+		w += 1 * (n_A_HEAD_DEF_PLUS - 7);
 	}
 
 	if(EquipNumSearch(1173))
@@ -2052,8 +2062,6 @@ n_A_MaxHP += SkillSearch(156) * 200;
 			n_A_MATK[0] += 10 * Math.floor((n_A_Weapon_ATKplus - 4)/2);
 			n_A_MATK[2] += 10 * Math.floor((n_A_Weapon_ATKplus - 4)/2);
 	}
-
-
 	if(n_A_PassSkill7[2]){
 		n_A_MATK[0] += 10;
 		n_A_MATK[2] += 10;
@@ -2816,6 +2824,12 @@ n_A_MaxHP += SkillSearch(156) * 200;
 		if(n_A_Weapon_ATKplus >= 6)
 			n_tok[317] += 5;
 	}
+	//Maiden Hat - ZoneSoldier - 6/6/2018
+	//Additional Heal effectiveness + 1% per upgrade past 7.
+	if(n_A_HEAD_DEF_PLUS >= 7 && EquipNumSearch(1628)){
+		n_tok[317] =+ 1 * (n_A_HEAD_DEF_PLUS - 7);
+	}
+
 	if(EquipNumSearch(1083)){
 		if(n_A_Weapon_ATKplus >= 6)
 			n_tok[317] += 5 + (2 * (n_A_Weapon_ATKplus - 5));
